--- a/_posts/notepad/2015-03-15-Test.md
+++ b/_posts/notepad/2015-03-15-Test.md
@@ -1,3 +1,11 @@
+---
+layout: post
+category : lessons
+tagline: "Supporting tagline"
+tags : [intro, beginner, jekyll, tutorial]
+---
+{% include JB/setup %}
+
 ###flexbox
 
 ####1.术语
