--- a/_posts/notepad/2015-04-23-onerror来实现前端运行是脚本监控.md
+++ b/_posts/notepad/2015-04-23-onerror来实现前端运行是脚本监控.md
@@ -1,3 +1,10 @@
+---
+layout: post
+category : js
+tagline: "前端运行时脚本错误监控"
+tags : [window.onerror, 前端脚本监控, try catch]
+---
+{% include JB/setup %}
 
 >这两天在关注前端页面运行时脚本出错报警的问题，大体上有两种解决方案：
 
