--- a/_posts/notepad/2015-04-23-onerror来实现前端运行是脚本监控.md
+++ b/_posts/notepad/2015-04-23-onerror来实现前端运行是脚本监控.md
@@ -66,9 +66,9 @@ window.onerror = function (errorMsg, url, lineNumber, column, errorObj) {
 鉴于window.onerror的好处，我们还是要硬着头皮去解决他的跨域问题。
 资源服务器：
 
-```
+{% highlight c %}
 res.setHeader("Access-Control-Allow-Origin", "http://localhost:8088");
-```
+{% endhighlight %}
 
 在页面引入脚本的script标签中加入`crossorigin="anonymous"`
 
