--- a/_posts/publish/2015-09-07-npm-fecmd.md
+++ b/_posts/publish/2015-09-07-npm-fecmd.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 category : [Tools, Publish]
-title : "gulp-fecmd"
+title : "fecmd"
 tagline: "利其器"
 tags : [require, CMD, fecmd, FE]
 excerpt:  前端也可以像nodejs一样使用require moduel.exports的方式来导出和引用文件且支持模板等。
