--- a/_posts/publish/2015-09-07-npm-fecmd.md
+++ b/_posts/publish/2015-09-07-npm-fecmd.md
@@ -10,7 +10,6 @@ excerpt:  前端也可以像nodejs一样使用require moduel.exports的方式来
 
 # fecmd
 
-github: [ https://github.com/shalles/fecmd ](https://github.com/shalles/fecmd)
 ### install
 
 ```
@@ -34,7 +33,7 @@ modulePath: bower module path(node model)
 
 *`priority`*
 
-`0`. commond line
+`0`. command line
 
 ```
 //a) scan src/source folder, convert all js files and export export/js with same name
