--- a/_posts/publish/2015-09-15-npm-fepro.md
+++ b/_posts/publish/2015-09-15-npm-fepro.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 category : [Tools, Publish]
-title : "servermock"
+title : "fepro项目构建工具"
 tagline: "利其器"
-tags : [mock, server, mockjson, FE]
+tags : [mock, server, mockjson, FE, require, CMD, fepro, sync]
 excerpt:  fepro 是一个集初始化、server、mock数据、同步服务器、部署的项目构建工具,提供了gulp的项目模板，可以定制自己的项目模板
 ---
 {% include JB/setup %}
