--- a/_posts/subject/skill/2017-05-15-promise.md
+++ b/_posts/subject/skill/2017-05-15-promise.md
@@ -140,5 +140,5 @@ class Promise {
 
 ### Test
 
-<iframe height='500' scrolling='no' title='promise' src='//codepen.io/shalles/embed/bWjzmy/?height=265&theme-id=0&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/shalles/pen/bWjzmy/'>promise</a> by shalles (<a href='http://codepen.io/shalles'>@shalles</a>) on <a href='http://codepen.io'>CodePen</a>.
+<iframe height='500' scrolling='no' title='promise' src='//codepen.io/shalles/embed/bWjzmy/?height=500&theme-id=0&default-tab=js,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/shalles/pen/bWjzmy/'>promise</a> by shalles (<a href='http://codepen.io/shalles'>@shalles</a>) on <a href='http://codepen.io'>CodePen</a>.
 </iframe>
