--- a/_posts/subject/skill/2017-05-13-lazywork.md
+++ b/_posts/subject/skill/2017-05-13-lazywork.md
@@ -2,7 +2,7 @@
 layout: post
 category : Skill
 title : "lazywork"
-tagline: "利其器"
+tagline: "code snippet"
 tags : [lazywork, coding skill, code, sleep]
 excerpt: new LazyWork().after('hi').sleep(3).before('say').after('shalles')
 ---
