--- a/_posts/subject/skill/2017-05-15-promise.md
+++ b/_posts/subject/skill/2017-05-15-promise.md
@@ -2,7 +2,7 @@
 layout: post
 category : Skill
 title : "Promise Promises/A+的实现"
-tagline: "利其器"
+tagline: "code snippet"
 tags : [promise, coding skill, code]
 excerpt: Promises/A+的实现
 ---
